# gitlab2jira

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gitlab2jira.py  pyproject.toml  requirements.txt  setup.py
